# core-jobs

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: PULL_REQUEST_TEMPLATE.md  ci.yaml
src/: main.py
src/jobs/: media_scraping.py
tests/: test_main.py
