[project]
name = "core-jobs"
version = "0.1.0"
description = "Jobs para el tablero"
authors = [
    {name = "ja.moralesv@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
package-mode = false
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.8.0"
ruff = "^0.3.0"
httpx = "^0.28.1"
pre-commit = "^4.5.1"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I"] # Errores, Pyflakes e Isort

[tool.mypy]
strict = true
ignore_missing_imports = true